# HSP

./: .gitignore  README.md  compose.dev.yaml  compose.yaml
backend/: Cargo.toml  go.mod  main.go
backend/src/: lib.rs  main.rs
backend/src/database/: database.rs  mod.rs  psqldb.rs  structs.rs
backend/src/database/mockdb/: activities.rs  auth.rs  mod.rs  student.rs
backend/src/database/psql/: mod.rs  student.rs
backend/src/database/psqldb/: activities.rs  auth.rs  mod.rs  student.rs
backend/src/encryption/: mod.rs  plaintext.rs
backend/src/endpoints/: activities.rs  admin.rs  auth.rs  mod.rs  student.rs
backend/src/repository/: activities_repository.rs  auth_repository.rs  mod.rs  student_repository.rs
backend/src/service/: activities_service.rs  admin_service.rs  auth_service.rs  mod.rs  student_service.rs
backend/src/types/: error.rs  mod.rs  role.rs
backend/tests/: activity_bind.rs  activity_create.rs  activity_delete.rs  activity_edit.rs  activity_get.rs  activity_search.rs
config/dev/: Caddyfile
config/prod/: Caddyfile
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  datepicker-override.css  index.css  main.tsx
frontend/src/axios/: axios.ts  structs.ts
frontend/src/components/: Format.ts  HoverDropdown.css  HoverDropdown.tsx  Modal.css  Modal.tsx  Result.ts  Role.ts  toast.tsx
frontend/src/pages/activities/: activities.css  activities.tsx
frontend/src/pages/admin/: Admin.css  Admin.tsx  RenderTable.tsx
frontend/src/pages/home/: Home.css  Home.tsx
frontend/src/pages/nursing/: nursing.css  (+1 more)
(+3 files in other folders)
