[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"]}
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }