[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"]}
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4"] }
rand = "0.10.1"
dotenvy = "0.15.7"
log = "0.4.29"
env_logger = "0.11.10"
